--- a/blocks/comments/__title/comments__title.css
+++ b/blocks/comments/__title/comments__title.css
@@ -1,56 +1,28 @@
 .comments__title {
-	width: 800px;
-	margin: 0;
-  align-self: center;
-  font-family: "Inter-Black", sans-serif;
-	font-size: 72px;
-	line-height: 108.9%;
-	text-align: center;
-	color: #FFFFFF;
+    margin: 0 0 27px 0;
+    font-style: normal;
+    font-family: "Inter-Black", sans-serif;
+    font-size: 32px;
+    line-height: 35px;
+    text-align: center;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.comments__title {
-		width: 800px;
-		font-size: 72px;
-		line-height: 108.9%;
-	}
-}	
+/*medium screen*/
+@media (min-width: 768px) {
+    .comments__title {
+        margin: 0 0 42px 0;
+        font-size: 42px;
+        line-height: 45px;
+    }
+}
 
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.comments__title {
-		width: 800px;
-		font-size: 72px;
-		line-height: 108.9%;
-	}	 
-}
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.comments__title {
-		width: 660px;
-		font-size: 42px;
-		line-height: 46px
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.comments__title {
-		width: 343px;
-		font-size: 32px;
-		line-height: 35px
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.comments__title {
-		width: 288px;
-		font-size: 32px;
-		line-height: 35px
-	}
+@media (min-width: 1024px) {
+    .comments__title {
+        margin: 0 auto 58px;
+        max-width: 800px;
+        font-size: 72px;
+        line-height: 78px;
+    }
 }
