--- a/blocks/nav/__link/nav__link.css
+++ b/blocks/nav/__link/nav__link.css
@@ -1,59 +1,24 @@
 @import url(./_active/nav__link_active.css);
+
 .nav__link {
-	font-size: 24px;
-	line-height: 23px;
-	margin-left: 18px;
-	color: #FFFFFF;
-	text-decoration: none;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 17px;
+    text-decoration: none;
+    color: #FFFFFF;
 }
 
 .nav__link:hover {
-  opacity: 50%;
-  transition: opacity .5s ease;
+    opacity: 50%;
+    transition: opacity .5s ease;
 }
+
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.nav__link {
-		font-size: 24px;
-		line-height: 23px;
-		margin-left: 18px;
-	}
-}
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.nav__link {
-		font-size: 24px;
-		line-height: 23px;
-		margin-left: 18px;
-	}
-}	
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.nav__link {
-		font-size: 24px;
-		line-height: 23px;
-		margin-left: 18px;
-	}	
+@media (min-width: 768px) {
+    .nav__link {
+        font-size: 24px;
+        line-height: 23px;
+    }
 }
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.nav__link {
-		font-size: 18px;
-		line-height: 97%;
-		margin-left: 16px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.nav__link {
-		font-size: 18px;
-		line-height: 17px;
-		margin-left: 16px;
-	}
-}	
