--- a/blocks/video/__text/video__text.css
+++ b/blocks/video/__text/video__text.css
@@ -3,11 +3,12 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 322px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*smaller  screen*/
-@media (min-width: 375px) {
+@media (min-width: 320px) {
   .video__text {
       padding: 0 24px 24px 24px;
   }
