--- a/blocks/comments/__image/comments__image.css
+++ b/blocks/comments/__image/comments__image.css
@@ -1,6 +1,14 @@
 .comments__image {
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	margin: 0;
+    border-radius: 50%;
+    width: 96px;
+    margin: 0 0 15px 0;
+    padding: 0;
+}
+
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*small screen*/
+@media (min-width: 375px) {
+    .comments__image {
+        width: 100px;
+    }
 }
