--- a/blocks/comments/__subtitle/comments__subtitle.css
+++ b/blocks/comments/__subtitle/comments__subtitle.css
@@ -1,58 +1,19 @@
-.comments__content-subtitle {
-	width: 640px;
-	margin: 0;
-	margin-top: 48px;
-  align-self: center;
-  font-family: "Inter", sans-serif;
-	font-style: normal;
-	font-size: 24px;
-	line-height: 35px;
-	text-align: center;
-	color: #FFFFFF;
+.comments__subtitle {
+    margin: 0 0 39px 0;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: center;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.comments__content-subtitle {
-		width: 640px;
-		font-size: 24px;
-		line-height: 35px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.comments__content-subtitle {
-		width: 640px;
-		font-size: 24px;
-		line-height: 35px;
-	}	 
-}
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.comments__content-subtitle {
-		width: 640px;
-		font-size: 24px;
-		line-height: 35px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.comments__content-subtitle {
-		width: 343px;
-		font-size: 16px;
-		line-height: 23px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.comments__content-subtitle {
-		width: 288px;
-		font-size: 16px;
-		line-height: 23px;
-	}
+@media (min-width: 768px) {
+    .comments__subtitle {
+        margin: 0 auto 70px;
+        max-width: 640px;
+        font-size: 24px;
+        line-height: 35px;
+    }
 }
