--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -1,4 +1,3 @@
-/*comments styles*/
 @import url(./__container/comments__container.css);
 @import url(./__author/comments__author.css);
 @import url(./__quote/comments__quote.css);
@@ -7,35 +6,23 @@
 @import url(./__title/comments__title.css);
 @import url(./__subtitle/comments__subtitle.css);
 
-.comments {
-  padding: 102px 0;
-  width: 1184px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-}
-
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.comments {
-    padding: 82px 50px;
-		width: 925px;
-	}
+
+.comments {
+    padding: 76px 16px 64px 16px;
+    max-width: 1184px;
+    margin: 0 auto;
 }
 
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.comments {
-    width: 660px;
-		padding: 116px 54px 100px;
-	}
+@media (min-width: 768px) {
+    .comments {
+        padding: 116px 64px 100px 64px;
+    }
 }
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.comments {
-    width: 288px;
-    padding: 76px 16px 64px;
-	}
+/*big screen*/
+@media (min-width: 1024px) {
+    .comments {
+        padding: 102px 48px 84px 48px;
+    }
 }
