--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,7 +7,7 @@
   text-align: center;
   align-self: center; 
   font-size: 72px;
-  font-family: "Inter-Black";
+  font-family: "Inter-Black", sans-serif;
 }
 
 @media (max-width: 1024px) {
