--- a/blocks/grid/__item/grid__item.css
+++ b/blocks/grid/__item/grid__item.css
@@ -1,49 +1,4 @@
 .grid__item {
-	width: 284px;
-	height: 188px;
-	list-style-type: none;
-	overflow: hidden;
-	background-position: center;
+    width: 100%;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.grid__item {
-		width: 284px;
-		height: 188px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.grid__item {
-		width: 300px;
-		height: 200px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.grid__item {
-		width: 352px;
-		height: 234px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.grid__item {
-		width: 343px;
-		height: 232px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.grid__item {
-		width: 288px;
-		height: 192px;
-	}
-}	
