--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,39 +1,13 @@
 .header__logo {
-	height: 46px;	
+    width: 156px;
+    height: 36px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.header__logo {
-		min-height: 46px;
-	}	
-}
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.header__logo {
-		min-height: 46px;
-	}	
-}
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.header__logo {
-		min-height: 46px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.header__logo {
-		min-height: 36px;
-	}	
-}
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.header__logo {
-		min-height: 36px;
-	}	
+@media (min-width: 768px) {
+    .header__logo {
+        width: 196px;
+        height: 46px;
+    }
 }
