--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,50 +1,26 @@
 @import url(./__logo/header__logo.css);
+
 .header {
-	padding: 34px 128px 50px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-  width: 1184px;
+    max-width: 1184px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 16px 0 16px;
+    margin: 0 auto;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.header {
-		padding: 37px 48px 47px;
-	   
-	}
+/*medium screen*/
+@media (min-width: 768px) {
+    .header {
+        padding: 36px 24px 0 24px;
+    }
 }
 
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.header {
-		padding: 36px 48px 47px;
-	  width: 928px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.header {
-		padding: 36px 24px 48px;
-	  width: 720px;
-	}	
+@media (min-width: 1024px) {
+    .header {
+        padding: 36px 48px 0 48px;
+    }
 }
 
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.header {
-		padding: 18px 16px 50px;
-		width: 343px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.header {
-		padding: 21px 16px 49px;
-		width: 288px;
-	}
-}	
