--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,64 +1,24 @@
 .intro__text {
-	width: 683px;
-	font-size: 14px;
-	line-height: 24px;
-	color: #FFFFFF;
-	margin: 0;
-	margin-top: 33px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 27px;
+    margin: 0 0 48px 0;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.intro__text {
-    width: 683px;
-    padding-left: 148px;
-		font-size: 14px;
-		line-height: 24px;
-		margin-top: 33px;
-	}
+/*medium screen*/
+@media (min-width: 768px) {
+    .intro__text {
+        font-size: 14px;
+        line-height: 24px;
+        margin: 0 0 25px 0;
+    }
 }
 
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.intro__text {
-    width: 683px;
-    padding-left: 48px;
-		font-size: 14px;
-		line-height: 24px;
-		margin-top: 38px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.intro__text {
-    width: 720px;
-    padding-left: 24px;
-		font-size: 14px;
-		line-height: 24px;
-		margin-top: 37px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.intro__text {
-    width: 343px;
-    padding-left: 16px;
-		font-size: 16px;
-		line-height: 27px;
-		padding-top: 35px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.intro__text {
-		width: 288px;
-		font-size: 16px;
-		line-height: 169.4%;
-		margin-top: 35px;
-	}
+@media (min-width: 1024px) {
+    .intro__text {
+        max-width: 682px;
+    }
 }
