--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,54 +1,25 @@
 .intro__title {
-	font-family: "Inter-Black", sans-serif;
-	font-size: 54px;
-	line-height: 59px;
-	width: 683px;
-	height: 113px;
-	color: #FFFFFF;
-	margin: 0;
+    font-style: normal;
+    font-family: "Inter-Black", sans-serif;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 0 34px 0;
+    padding: 0;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.intro__title {
-    padding-left: 148px;
-		width: 690px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.intro__title {
-    padding-left: 48px;
-		width: 800px;
-	}
-}	
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.intro__title {
-    padding-left: 24px;
-		width: 760px;
-	}	
+@media (min-width: 768px) {
+    .intro__title {
+        font-size: 54px;
+        line-height: 59px;
+        margin: 0 0 46px 0;
+    }
 }
 
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.intro__title {
-    padding-left: 16px;
-		width: 350px;
-		font-size: 32px;
-		line-height: 35px
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.intro__title {
-		width: auto;
-		font-size: 32px;
-		line-height: 35px
-	}
+/*big screen*/
+@media (min-width: 1024px) {
+    .intro__title {
+        max-width: 682px;
+    }
 }
