--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,54 +1,23 @@
-/*intro styles*/
 @import url(./__title/intro__title.css);
 @import url(./__subtitle/intro__subtitle.css);
 @import url(./__text/intro__text.css);
+
+
 .intro {
-	padding-left: 228px;
-	margin:0;
-	width: 683px;
-	display: flex;
-	justify-content: flex-start;
-	flex-direction: column;
+    padding: 0 16px 72px 16px;
+    margin: 0 auto;
+    max-width: 984px;
 }
-
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.intro {
-		padding-left: 0;
-		width: auto;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.intro {
-		padding-left: 0px;
-		width: auto;
-	}
-}	
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.intro {
-		padding-left: 0px;
-		width: auto;
-	}	
+@media (min-width: 768px) {
+    .intro {
+        padding: 0 24px 93px 24px;
+    }
 }
 
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.intro {
-		padding-left: 0px;
-		width: auto;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.intro {
-		padding-left: 0px;
-		width: auto;
-	}
+@media (min-width: 1024px) {
+    .intro {
+        padding: 0 48px 102px 48px;
+    }
 }
