--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,43 +1,28 @@
 .lead__image {
-	width:100%;
-	height: auto;
-	padding-top: 67px;
+    width: 100%;
+    margin: 0 0 8px 0;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.lead__image {
-		width:100%;
-		
-	}
-}	
+/*medium screen*/
+@media (min-width: 768px) {
+    .lead__image {
+        margin: 0 0 16px 0;
+    }
+}
 
 /*big screen*/
-@media screen and (max-width: 1024px) {
-	.lead__image {
-		width:100%;
-	}
+@media (min-width: 1024px) {
+    .lead__image {
+        width: calc(100% - 96px);
+        padding: 0 48px;
+        max-width: 984px;
+    }
 }
 
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.lead__image {
-		width:100%;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.lead__image {
-    width:100%;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.lead__image {
-    width:100%;
-	}
+/*large screen*/
+@media (min-width: 1280px) {
+    .lead__image {
+        margin: 0 0 11px 0;
+    }
 }
