--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,56 +1,21 @@
 .lead__subtitle {
-	font-size: 30px;
-	line-height: 36px;
-	width: 583px;
-	padding-top: 48px;
-	text-align: center;
-	align-items: center;
-	margin: auto;
-	color: #FFFFFF;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    text-align: center;
+    margin: 0 auto 32px;
+    max-width: 288px;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.lead__subtitle {
-		width: 600px;
-		font-size: 30px;
-		line-height: 36px;
-	}
-}
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.lead__subtitle {
-		width: 630px;
-		font-size: 30px;
-		line-height: 36px;
-	}
-}	
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.lead__subtitle {
-		width: 80%;
-		font-size: 30px;
-		line-height: 36px;
-	}	
+@media (min-width: 768px) {
+    .lead__subtitle {
+        font-size: 30px;
+        line-height: 36px;
+        margin: 0 auto 67px;
+        max-width: 610px;
+    }
 }
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.lead__subtitle {
-	
-		font-size: 16px;
-		line-height: 23px;
-	}
-}	
 
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.lead__subtitle {
-	
-		font-size: 16px;
-		line-height: 23px;
-	}
-}	
