--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,57 +1,19 @@
-/*lead styles*/
+@import url(./__caption/lead__caption.css);
+@import url(./__image/lead__image.css);
 @import url(./__title/lead__title.css);
 @import url(./__subtitle/lead__subtitle.css);
-@import url(./__image/lead__image.css);
-@import url(./__caption/lead__caption.css);
-.lead {
-	padding-bottom: 81px;
-	margin: auto;
-	width: 984px;
-	display: flex;
-  justify-content: center;
-  align-self: center;
-	flex-direction: column;
-}
 
+.lead {
+    padding: 48px 0 64px 0;
+    margin: 0 auto;
+    max-width: 1080px;
+}
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.lead {
-		
-		padding-bottom: 81px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.lead {
-		width: 90%;
-		padding-bottom: 76px;
-	}
-}
-
 /*medium screen*/
-@media screen and (max-width: 768px) {
-	.lead {
-		width: 100%;
-		padding-bottom: 80px;
-	}	
+@media (min-width: 768px) {
+    .lead {
+        padding: 48px 0 80px 0;
+    }
 }
 
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.lead {
-    
-		padding-bottom: 64px;
-	}
-}	
-
-/*smaller screen*/
-@media screen and (max-width: 320px) {
-	.lead {
-    
-		padding-bottom: 64px;
-	}
-}
