--- a/blocks/nav/__link/_active/nav__link_active.css
+++ b/blocks/nav/__link/_active/nav__link_active.css
@@ -1,4 +1,3 @@
-/*active link style*/
-.nav__link_active {
-	text-decoration: underline;
+.header__link_active {
+    text-decoration: underline;
 }
