--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,11 +1,9 @@
-/*Page styles*/
 .page {
-	min-width: 320px;
-	max-width: 1440px;
-	margin: 0 auto;
-	background: #2A2C2F;
-	font-family: "Inter", "Arial", sans-serif;
-	font-style: normal;
-  font-weight: normal;
+    background: #2A2C2F;
+    margin: 0 auto;
+    padding: 0;
+    min-width: 320px;
+    max-width: 1440px;
+    font-family: 'Inter-Regular', Arial, sans-serif;
+    color: #FFFFFF;
 }
-
