--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,30 +1,23 @@
 .place__title {
-  font-style: normal;
-  font-weight: 900;
-  color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-  align-self: flex-end;
-  font-size: 32px;
-  line-height: 35px;
-  margin: 0 16px 32px 16px;
-  padding: 0;
+    font-style: normal;
+    font-family: "Inter-Black", sans-serif;
+    font-size: 32px;
+    line-height: 35px;
+    margin: 0 16px 32px 16px;
+    padding: 0;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*big screen*/
-@media (min-width: 1024px) {
-  .place__title {
-      font-size: 72px;
-      line-height: 65px;
-  }
-}
-
-/*medium screen*/
 @media (min-width: 768px) {
-  .place__title {
-      font-size: 42px;
-      line-height: 46px;
-      margin: 0;
-  }
+    .place__title {
+        font-size: 42px;
+        line-height: 46px;
+        margin: 0;
+    }
+}
+
+@media (min-width: 1024px) {
+    .place__title {
+        font-size: 72px;
+        line-height: 65px;
+    }
 }
