--- a/blocks/video/__name/video__name.css
+++ b/blocks/video/__name/video__name.css
@@ -1,6 +1,6 @@
 .video__name {
   font-style: normal;
-  font-weight: 900;
+  font-family: "Inter-Black";
   font-size: 24px;
   line-height: 26px;
   margin: 0 0 4px 0;
