--- a/blocks/video/__title/video__title.css
+++ b/blocks/video/__title/video__title.css
@@ -3,9 +3,19 @@
   justify-content: center;
   margin: auto;
   text-align: center;
+  font-family: "Inter-Black", sans-serif;
   font-size: 72px;
   line-height: 39px;
   color: #FFFFFF;
+}
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium*/
+@media screen and (max-width: 768px) {
+	.video__title {
+    width: auto;
+		font-size: 42px;
+    line-height: 107.64%;
+	}	
 }
 
 /*small screen*/
@@ -16,3 +26,4 @@
 		line-height: 35px;
 	}	
 }
+
