--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -6,42 +6,49 @@
   text-align: center;
   margin: 0 auto 8px;
   padding: 0;
-  max-width: 782px;
+  width: 928px;
 }
-
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*medium screen*/
-@media (max-width: 768px) {
-  .lead__title {
-    margin: 0 auto 48px;
-  }
-}	
-
-/*medium-small screen*/
-@media screen and (max-width: 750px) {
-  .lead__title {
-    width: auto;
-    font-size: 66px;
-    line-height: 63px;
-  }
-}
-
-/*medium smaller screen*/
-@media screen and (max-width: 510px) {
-  .lead__title {
-    width: auto;
-    font-size: 66px;
-    line-height: 63px;
-  }
-}
-
 
 /*small screen*/
-@media screen and (max-width: 375px) {
+@media screen and (min-width: 320px){
+    .lead__title{
+        width: 288px;
+        font-size: 40px;
+        line-height: 44px;
+    }
+}
+
+@media screen and (min-width: 375px) {
 	.lead__title {
-		width:auto;
-		font-size: 40px;
-		line-height: 44px;
+		width:343px;
 	}
+}	 
+
+
+@media (min-width: 768px) {
+  .lead__title {
+    margin: 0 auto 48px;
+    width: 720px;
+    font-size: 96px;
+    line-height: 93px;
+  }
 }	
+
+
+@media (min-width: 1024px) {
+  .lead__title {
+    width: 928px;
+  }
+}
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media (min-width: 1280px) {
+  .lead__title {
+    width: 782px;
+  }
+}
+
+
+
+
 
