--- a/blocks/video/__subtitle/video__subtitle.css
+++ b/blocks/video/__subtitle/video__subtitle.css
@@ -1,6 +1,6 @@
 .video__subtitle {
-	width: 639px;
-	
+	max-width: 640px;
+	min-width: 288px;
 	margin: auto;
 	margin-top: 37px;
   align-self: center;
@@ -12,49 +12,9 @@
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*large screen*/
-@media screen and (max-width: 1280px) {
-	.video__subtitle {
-		width: 640px;
-		
-		font-size: 24px;
-		line-height: 35px;
-	}
-}	
-
-/*big screen*/
-@media screen and (max-width: 1024px) {
-	.video__subtitle {
-		width: 640px;
-		
-		font-size: 24px;
-		line-height: 35px;
-	}
-}	
-
-/*medium screen*/
-@media screen and (max-width: 768px) {
-	.video__subtitle {
-		width: 640px;
-		
-		font-size: 24px;
-		line-height: 35px;
-	}	
-}
-
-/*small screen*/
-@media screen and (max-width: 375px) {
-	.video__subtitle {
-    width: 343px;
-    margin-top: 31px;
-		
-		font-size: 16px;
-		line-height: 23px;
-	}
-}	
 
 /*smaller screen*/
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 320px) {
 	.video__subtitle {
     width: 288px;
     margin-top: 25px;
@@ -63,3 +23,46 @@
 		line-height: 23px;
 	}
 }	
+
+/*small screen*/
+@media screen and (min-width: 375px) {
+	.video__subtitle {
+    width: 340px;
+    margin-top: 31px;
+		
+		font-size: 16px;
+		line-height: 23px;
+	}
+}	
+
+/*medium screen*/
+@media screen and (min-width: 768px) {
+	.video__subtitle {
+		width: 640px;
+		
+		font-size: 24px;
+		line-height: 35px;
+	}	
+}
+
+
+/*big screen*/
+@media screen and (min-width: 1024px) {
+	.video__subtitle {
+		width: 640px;
+		
+		font-size: 24px;
+		line-height: 35px;
+	}
+}	
+
+/*large screen*/
+@media screen and (min-width: 1280px) {
+	.video__subtitle {
+		width: 640px;
+		
+		font-size: 24px;
+		line-height: 35px;
+	}
+}	
+
