fixed horizontal scroll

--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
     font-style: normal;
-    font-family: "Inter-Black", sans-serif;
+    font-weight: bold;
     font-size: 32px;
     line-height: 35px;
     margin: 0 0 34px 0;
