--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,6 +4,6 @@
     padding: 0;
     min-width: 320px;
     max-width: 1440px;
-    font-family: 'Inter-Regular', Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     color: #FFFFFF;
 }
