--- a/blocks/comments/__title/comments__title.css
+++ b/blocks/comments/__title/comments__title.css
@@ -1,7 +1,7 @@
 .comments__title {
     margin: 0 0 27px 0;
     font-style: normal;
-    font-family: "Inter-Black", sans-serif;
+    font-weight: bold;
     font-size: 32px;
     line-height: 35px;
     text-align: center;
