--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -7,13 +7,15 @@
   text-align: center;
   align-self: center; 
   font-size: 72px;
-  font-family: "Inter-Black", sans-serif;
+  font-weight: bold;
+  width: 1094px;
 }
 
 @media (max-width: 1024px) {
   .cover__title {
     padding-top: 240px;
     padding-bottom: 181px;
+    width: 1021px;
   }
 }
 
@@ -21,6 +23,7 @@
   .cover__title {
     padding-top: 165px;
     padding-bottom: 127px;
+    width: 720px;
   }
 }
 
@@ -29,6 +32,7 @@
     font-size: 32px;
     padding-top: 104px;
     padding-bottom: 55px;
+    width: 343px;;
   }
 }
 
@@ -36,5 +40,6 @@
   .cover__title {
     padding-top: 64px;
     padding-bottom: 40px;
+    width: 288px;
   }
 }
