--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,6 @@
 .place__title {
     font-style: normal;
-    font-family: "Inter-Black", sans-serif;
+    font-weight: bold;
     font-size: 32px;
     line-height: 35px;
     margin: 0 16px 32px 16px;
