--- a/blocks/video/__author/video__author.css
+++ b/blocks/video/__author/video__author.css
@@ -3,7 +3,34 @@
   font-weight: normal;
   font-size: 14px;
   line-height: 15px;
-  padding: 0;
-  padding-top: 18px;
+  padding-bottom: 30px;
+  padding-left: 30px;
   margin: 0;
+}
+
+@media screen and (max-width: 1024px){
+  .video__author {
+    padding-bottom: 35px;
+  }
+}
+
+@media screen and (max-width: 768px){
+  .video__author {
+    padding-bottom: 24px;
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 375px){
+  .video__author {
+    width: 295px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .video__author {
+    width: 256px;
+    padding-bottom: 16px;
+    padding-left: 16px;
+  }
 }
