--- a/blocks/video/__content/video__content.css
+++ b/blocks/video/__content/video__content.css
@@ -6,5 +6,17 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 322px;
 }
 
+@media screen and (max-width: 375px){
+  .video__content {
+    width: 295px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .video__content {
+    width: 256px;
+  }
+}
