--- a/blocks/video/__duration/video__duration.css
+++ b/blocks/video/__duration/video__duration.css
@@ -4,5 +4,29 @@
   font-size: 12px;
   line-height: 13px;
   letter-spacing: 0.3em;
-  margin: 0 0 8px 0;
+  margin: 0;
+  width: 322px;
+  padding-left: 30px;
+  padding-bottom: 12px;
+}
+
+@media screen and (max-width: 768px){
+  .video__duration {
+    padding-bottom: 8px;
+    padding-left: 24px;
+  }
+}
+
+@media screen and (max-width: 375px){
+  .video__duration {
+    width: 295px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .video__duration {
+    width: 256px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+  }
 }
