--- a/blocks/video/__icon/video__icon.css
+++ b/blocks/video/__icon/video__icon.css
@@ -1,18 +1,36 @@
 .video__icon {
   width: 41px;
   height: 41px;
-  padding: 16px 16px 0 16px;
+  padding-bottom: 94px;
+    padding-left: 30px;
+    padding-top: 30px;
 }
 
-/*small screen*/
-@media (min-width: 375px) {
+
+@media screen and (max-width: 1024px){
   .video__icon {
-      padding: 24px 24px 0 24px;
+    padding-bottom: 54px;
   }
 }
-/*big screen*/
-@media (min-width: 1024px) {
+
+@media screen and (max-width: 768px){
   .video__icon {
-      padding: 30px 30px 0 30px;
+    padding-bottom: 17px;
+    padding-left: 24px;
+    padding-top: 24px;
+  }
+}
+
+@media screen and (max-width: 375px){
+  .video__icon {
+    padding-bottom: 41px;
+  }
+}
+
+@media screen and (max-width: 320px){
+  .video__icon {
+    padding-bottom: 23px;
+    padding-left: 16px;
+    padding-top: 16px;
   }
 }
