--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,7 @@
 .cover__subtitle {
   margin: 0;
     width: 382px;
+    padding-top: 134px;
     align-self: center;
     line-height: 23px;
     font-size: 18px;
@@ -10,11 +11,24 @@
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+@media (max-width: 1024px) {
+  .cover__subtitle {
+    padding-top: 181px;
+  }
+}
+
+@media (max-width: 768px) {
+  .cover__subtitle {
+    padding-top: 127px;
+  }
+}
+
 /*small screen*/
 @media (max-width: 375px) {
   .cover__subtitle {
     font-size: 14px;
     line-height: 17px;
     width: 290px;
+    padding-top: 7px;
   }
 }
