fixed layout for project review again

--- a/blocks/comments/__image/comments__image.css
+++ b/blocks/comments/__image/comments__image.css
@@ -7,7 +7,7 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*small screen*/
-@media (min-width: 375px) {
+@media screen and (min-width: 375px) {
     .comments__image {
         width: 100px;
     }
