--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,7 +14,7 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .footer {
         padding: 102px 24px 24px 24px;
         flex-direction: row;
@@ -23,7 +23,7 @@
 }
 
 /*big screen*/
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .footer {
         padding: 160px 48px 48px 48px;
     }
