--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -10,13 +10,13 @@
 }
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .intro {
         padding: 0 24px 93px 24px;
     }
 }
-
-@media (min-width: 1024px) {
+/*big screen*/
+@media screen and (min-width: 1024px) {
     .intro {
         padding: 0 48px 102px 48px;
     }
