--- a/blocks/place/__url-container/place__url-container.css
+++ b/blocks/place/__url-container/place__url-container.css
@@ -2,7 +2,7 @@
     display: none;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .place__url-container {
         display: inline;
     }
