--- a/blocks/values/__item/values__item.css
+++ b/blocks/values/__item/values__item.css
@@ -2,7 +2,6 @@
 
 .values__item {
     font-style: normal;
-    font-weight: normal;
     font-size: 12px;
     line-height: 19px;
     margin: 0;
@@ -11,7 +10,7 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .values__item {
         font-size: 13px;
         line-height: 20px;
