--- a/blocks/comments/__author/comments__author.css
+++ b/blocks/comments/__author/comments__author.css
@@ -10,7 +10,7 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*big screen*/
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .comments__author {
         text-align: start;
         order: 1;
