--- a/blocks/comments/__container/comments__container.css
+++ b/blocks/comments/__container/comments__container.css
@@ -10,14 +10,14 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .comments__container {
         grid-gap: 45px;
     }
 }
 
 /*big screen*/
-@media (min-width: 1024px) {
+@media screen and (min-width: 1024px) {
     .comments__container {
         grid-template-columns: repeat(3, 1fr);
         grid-template-rows: 1fr;
