--- a/blocks/comments/__subtitle/comments__subtitle.css
+++ b/blocks/comments/__subtitle/comments__subtitle.css
@@ -9,7 +9,7 @@
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*medium screen*/
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .comments__subtitle {
         margin: 0 auto 70px;
         max-width: 640px;
