--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -7,7 +7,9 @@
     margin: 0;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (min-width: 768px) {
     .footer__item {
         display: inline-block;
         margin: 0 37px 0 0;
