--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -12,14 +12,17 @@
     transition: opacity 2s ease-in;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (min-width: 768px) {
     .footer__link {
         font-size: 16px;
         line-height: 27px;
     }
 }
 
-@media (min-width: 1024px) {
+/*big screen*/
+@media screen and (min-width: 1024px) {
     .footer__link {
         font-size: 24px;
         line-height: 41px;
