--- a/blocks/grid/grid.css
+++ b/blocks/grid/grid.css
@@ -11,7 +11,7 @@
 }
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*small screen*/
-@media (min-width: 375px) {
+@media screen and (min-width: 375px) {
     .grid {
         grid-gap: 16px;
     }
