--- a/blocks/nav/__item/nav__item.css
+++ b/blocks/nav/__item/nav__item.css
@@ -3,7 +3,9 @@
     margin: 0 0 0 16px;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (min-width: 768px) {
     .nav__item {
         margin: 0 0 0 18px;
     }
