--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -3,7 +3,7 @@
     margin: 0 0 24px 0;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .place__image {
         margin: 0;
     }
