--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -11,7 +11,7 @@
     margin: 0 16px;
 }
 
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .place__text {
         font-size: 18px;
         line-height: 30px;
