--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,13 +1,15 @@
 .place__title {
     font-style: normal;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 32px;
     line-height: 35px;
     margin: 0 16px 32px 16px;
     padding: 0;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (min-width: 768px) {
     .place__title {
         font-size: 42px;
         line-height: 46px;
@@ -15,7 +17,8 @@
     }
 }
 
-@media (min-width: 1024px) {
+/*big screen*/
+@media screen and (min-width: 1024px) {
     .place__title {
         font-size: 72px;
         line-height: 65px;
