--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -12,7 +12,9 @@
     max-width: 984px;
 }
 
-@media (min-width: 768px) {
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*medium screen*/
+@media screen and (min-width: 768px) {
     .place {
         padding: 90px 24px 0 24px;
         display: grid;
@@ -21,15 +23,15 @@
         grid-gap: 28px 40px;
     }
 }
-
-@media (min-width: 1024px) {
+/*big screen*/
+@media screen and (min-width: 1024px) {
     .place {
         padding: 90px 48px 0 48px;
         grid-gap: 32px 40px;
     }
 }
-
-@media (min-width: 1280px) {
+/*large screen*/
+@media screen and (min-width: 1280px) {
     .place {
         grid-gap: 60px 40px;
     }
