--- a/blocks/video/__author/video__author.css
+++ b/blocks/video/__author/video__author.css
@@ -1,36 +1,36 @@
 .video__author {
-  font-style: normal;
-  font-weight: normal;
+  color: white;
   font-size: 14px;
   line-height: 15px;
-  padding-bottom: 30px;
-  padding-left: 30px;
+  padding: 0 16px 16px 16px;
   margin: 0;
 }
 
-@media screen and (max-width: 1024px){
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*small screen*/
+@media screen and (min-width: 375px){
   .video__author {
-    padding-bottom: 35px;
+    padding: 0 24px 24px 24px;
   }
 }
 
-@media screen and (max-width: 768px){
+/*medium screen*/
+@media screen and (min-width: 768px){
   .video__author {
-    padding-bottom: 24px;
-    padding-left: 24px;
+    padding: 0 150px 24px 24px;
   }
 }
 
-@media screen and (max-width: 375px){
+/*big screen*/
+@media screen and (min-width: 1024px){
   .video__author {
-    width: 295px;
+    padding: 0 252px 35px 30px;
   }
 }
 
-@media screen and (max-width: 320px){
+/*large screen*/
+@media screen and (min-width: 1280px){
   .video__author {
-    width: 256px;
-    padding-bottom: 16px;
-    padding-left: 16px;
+    padding: 0 379px 30px 30px;
   }
 }
