--- a/blocks/video/__container/video__container.css
+++ b/blocks/video/__container/video__container.css
@@ -1,20 +1,35 @@
 .video__container {
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr 1fr;
-  grid-gap: 8px;
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  padding-top: 72px;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    grid-gap: 8px;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    padding-top: 72px;
 }
 
-/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-/*medium screen*/
-@media (min-width: 768px) {
+/*smaller screen*/
+@media screen and (min-width: 320px) {
   .video__container {
+    padding-top: 25px;
+  }
+}
+
+/*medium screen*/
+@media screen and (min-width: 768px) {
+    .video__container {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: 1fr;
       grid-gap: 16px;
+      padding-top: 56px;
+    }
+}
+
+/*big screen*/
+@media screen and (min-width: 1024px) {
+  .video__container {
+    padding-top: 72px;
   }
 }
+
