--- a/blocks/video/__icon/video__icon.css
+++ b/blocks/video/__icon/video__icon.css
@@ -1,36 +1,21 @@
 .video__icon {
   width: 41px;
   height: 41px;
-  padding-bottom: 94px;
-    padding-left: 30px;
-    padding-top: 30px;
+  margin: 0;
+  padding: 16px 0 0 16px;
 }
 
-
-@media screen and (max-width: 1024px){
-  .video__icon {
-    padding-bottom: 54px;
-  }
+/*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*smaller screen*/
+@media screen and (min-width: 375px) {
+    .video__icon {
+      padding: 24px 0 0 24px;
+    }
 }
 
-@media screen and (max-width: 768px){
-  .video__icon {
-    padding-bottom: 17px;
-    padding-left: 24px;
-    padding-top: 24px;
-  }
-}
-
-@media screen and (max-width: 375px){
-  .video__icon {
-    padding-bottom: 41px;
-  }
-}
-
-@media screen and (max-width: 320px){
-  .video__icon {
-    padding-bottom: 23px;
-    padding-left: 16px;
-    padding-top: 16px;
-  }
+/*big screen*/
+@media screen and (min-width: 1024px) {
+    .video__icon {
+      padding: 30px 0 0 30px;
+    }
 }
