--- a/blocks/video/__text/video__text.css
+++ b/blocks/video/__text/video__text.css
@@ -7,19 +7,21 @@
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
+/*smaller  screen*/
+@media screen and (min-width: 320px) {
+  .video__text {
+      padding: 0 24px 24px 24px;
+      width: 256px;
+  }
+}
+
 /*small screen*/
-@media (min-width: 375px) {
+@media screen and (min-width: 375px) {
   .video__text {
       padding: 0 30px 30px 30px;
       width: 295px;
   }
 }
 
-/*smaller  screen*/
-@media (min-width: 320px) {
-  .video__text {
-      padding: 0 24px 24px 24px;
-      width: 256px;
-  }
-}
+
 
