--- a/blocks/video/__title/video__title.css
+++ b/blocks/video/__title/video__title.css
@@ -3,7 +3,7 @@
   justify-content: center;
   margin: auto;
   text-align: center;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 72px;
   line-height: 39px;
   color: #FFFFFF;
