--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
-@import url(./__items/footer__items.css);
-@import url(./__item/footer__item.css);
-@import url(./__link/footer__link.css);
-@import url(./__copyright/footer__copyright.css);
+@import url('./__items/footer__items.css');
+@import url('./__item/footer__item.css');
+@import url('./__link/footer__link.css');
+@import url('./__copyright/footer__copyright.css');
 
 .footer {
     padding: 64px 16px 22px 16px;
