--- a/blocks/nav/nav.css
+++ b/blocks/nav/nav.css
@@ -1,6 +1,6 @@
-@import url(./__item/nav__item.css);
-@import url(./__link/nav__link.css);
-@import url(./__link/_active/nav__link_active.css);
+@import url('./__item/nav__item.css');
+@import url('./__link/nav__link.css');
+@import url('./__link/_active/nav__link_active.css');
 
 .nav {
     list-style: none;
