--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,9 @@
-@import url(./__title/place__title.css);
-@import url(./__url-container/place__url-container.css);
-@import url(./__url-heading/place__url-heading.css);
-@import url(./__url/place__url.css);
-@import url(./__image/place__image.css);
-@import url(./__text/place__text.css);
+@import url('./__title/place__title.css');
+@import url('./__url-container/place__url-container.css');
+@import url('./__url-heading/place__url-heading.css');
+@import url('./__url/place__url.css');
+@import url('./__image/place__image.css');
+@import url('./__text/place__text.css');
 
 
 .place {
