--- a/blocks/values/__item/values__item.css
+++ b/blocks/values/__item/values__item.css
@@ -1,4 +1,4 @@
-@import url(./_bold/values__item_bold.css);
+@import url('./_bold/values__item_bold.css');
 
 .values__item {
     font-style: normal;
