--- a/blocks/comments/comments.css
+++ b/blocks/comments/comments.css
@@ -1,10 +1,10 @@
-@import url(./__container/comments__container.css);
-@import url(./__author/comments__author.css);
-@import url(./__quote/comments__quote.css);
-@import url(./__image/comments__image.css);
-@import url(./__item/comments__item.css);
-@import url(./__title/comments__title.css);
-@import url(./__subtitle/comments__subtitle.css);
+@import url('./__container/comments__container.css');
+@import url('./__author/comments__author.css');
+@import url('./__quote/comments__quote.css');
+@import url('./__image/comments__image.css');
+@import url('./__item/comments__item.css');
+@import url('./__title/comments__title.css');
+@import url('./__subtitle/comments__subtitle.css');
 
 .comments {
     padding: 76px 16px 64px 16px;
