--- a/blocks/cover/__image/cover__image.css
+++ b/blocks/cover/__image/cover__image.css
@@ -3,14 +3,13 @@
   width: 1184px;
   height: 594px;
   background-repeat: no-repeat;
-  background: #2a2c2f;
-  opacity: 0.7;
+  opacity: .7;
   overflow: hidden;
   }
 
   .cover__image:hover {
     opacity: 50%;
-    transition: opacity 0.5s ease;
+    transition: opacity .5s ease;
   }
   
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
@@ -18,21 +17,22 @@
 @media screen and (max-width: 1024px) {
 	.cover__image {
     width: 100%;
-    height: 594px;
+    height: 50%;
+    
 	}	 
 }
 
 /*medium screen*/
 @media screen and (max-width: 768px) {
 	.cover__image {  
-    height: 500px;
+    max-height: 500px;
 	}	
 }
 
 /*small screen*/
 @media screen and (max-width: 375px) {
 	.cover__image {
-    height: 272px;
+    max-height: 272px;
 	}
 }	
 
