--- a/blocks/cover/__text/cover__text.css
+++ b/blocks/cover/__text/cover__text.css
@@ -2,43 +2,44 @@
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 274px;
-  left: 38px;
-  width: 1094px;
+  top: 0;
+  left: 0;
+  /*width: 1094px*/;
+  width: 100%;
 }
 
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
 /*big screen*/
-@media screen and (max-width: 1024px) {
+/*@media screen and (max-width: 1024px) {
 	.cover__text {
-    width: 1021px;
-    top: 240px;
+    /*width: 1021px;*/
+    /*top: 240px;
     left: -16.5px;
 	}	 
 }
 
-@media screen and (max-width: 768px) {
+/*@media screen and (max-width: 768px) {
 	.cover__text {
-    width: 720px;
-    top: 165px;
+    /*width: 720px;*/
+    /*top: 165px;
     left: 24px;
 	}	 
 }
 
 
-@media screen and (max-width: 375px) {
+/*@media screen and (max-width: 375px) {
 	.cover__text {
-    width: 343px;
-    top: 104px;
+    /*width: 343px;*/
+    /*top: 104px;
     left: 16px;
 	}	 
 }
 
 
-@media screen and (max-width: 320px) {
+/*@media screen and (max-width: 320px) {
 	.cover__text {
-    width: 288px;
-    top: 64px;
+    /*width: 288px;*/
+    /*top: 64px;
     left: 16px;
 	}	 
 }
