--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,39 +1,40 @@
 
 .cover__title {
   margin: 0;
-  color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
-  left: 38px;
-  text-align: center;
-  font-size: 72px;
+  padding-top: 274px;
+  font-style: normal;
   font-weight: 900;
-  width: 1094px;
+  font-size: 32px;
+  line-height: 35px;
+  text-align: center;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (min-width: 320px) {
   .cover__title {
-    width: 1021px;
+    padding-top: 64px;
+  }
+}
+@media screen and (min-width: 375px) {
+  .cover__title {
+    padding-top: 104px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .cover__title {
-    width: 720px;
+    /*margin: 164px 0 127px 0;*/
+    padding-top: 165px;
+    font-size: 72px;
+    line-height: 45px;
   }
 }
 
-@media screen and (max-width: 375px) {
-  .cover__title {
-    font-size: 32px;
-    width: 343px;
-    height: 80px;
-  }
-}
 
-@media screen and (max-width: 320px) {
+@media screen and (min-width: 1024px) {
   .cover__title {
-    width: 288px;
-    height: 72px;
+    /*margin: 227px 0 171px 0;*/
+    padding-top: 240px;
+    font-size: 72px;
+    line-height: 78px;
   }
 }
