--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,6 @@
-@import url(./__title/intro__title.css);
-@import url(./__subtitle/intro__subtitle.css);
-@import url(./__text/intro__text.css);
+@import url('./__title/intro__title.css');
+@import url('./__subtitle/intro__subtitle.css');
+@import url('./__text/intro__text.css');
 
 
 .intro {
