--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,7 +3,7 @@
     font-weight: normal;
     font-size: 10px;
     line-height: 12px;
-    letter-spacing: 0.15em;
+    letter-spacing: .15em;
     text-transform: uppercase;
     padding: 0;
     margin: 0 16px;
