--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -3,7 +3,7 @@
     font-weight: normal;
     font-size: 12px;
     line-height: 20px;
-    letter-spacing: 0.2em;
+    letter-spacing: .2em;
     margin: 0 0 16px 0;
     padding: 0;
 }
