--- a/blocks/video/__name/video__name.css
+++ b/blocks/video/__name/video__name.css
@@ -2,7 +2,7 @@
   font-size: 24px;
     line-height: 26px;
     margin: 0;
-    padding: 0px 16px 4px 16px;
+    padding: 0 16px 4px 16px;
     width: 256px;
     font-weight: 900;
 }
