--- a/pages/index.css
+++ b/pages/index.css
@@ -1,22 +1,82 @@
 /*Use these checkpoints: 320, 375, 768, 1024, 1280*/
-@import url(../vendor/fonts/fonts.css);
-@import url(../vendor/normalize.css);
-@import url(../blocks/page/page.css);
-@import url(../blocks/content/content.css);
-@import url(../blocks/header/header.css);
-@import url(../blocks/nav/nav.css);
-@import url(../blocks/lead/lead.css);
-@import url(../blocks/intro/intro.css);
-@import url(../blocks/values/values.css);
-@import url(../blocks/photo/photo.css);
-@import url(../blocks/grid/grid.css);
-@import url(../blocks/places/places.css);
-@import url(../blocks/place/place.css);
-@import url(../blocks/video/video.css);
-@import url(../blocks/comments/comments.css);
-@import url(../blocks/cover/cover.css);
-@import url(../blocks/footer/footer.css);
+@import url('../vendor/fonts/fonts.css');
+@import url('../vendor/normalize.css');
+@import url('../blocks/body/body.css');
+@import url('../blocks/page/page.css');
+@import url('../blocks/content/content.css');
+@import url('../blocks/header/header.css');
+@import url('../blocks/nav/nav.css');
+@import url('../blocks/lead/lead.css');
+@import url('../blocks/intro/intro.css');
+@import url('../blocks/values/values.css');
+@import url('../blocks/photo/photo.css');
+@import url('../blocks/grid/grid.css');
+@import url('../blocks/places/places.css');
+@import url('../blocks/place/place.css');
+@import url('../blocks/video/video.css');
+@import url('../blocks/comments/comments.css');
+@import url('../blocks/cover/cover.css');
+@import url('../blocks/footer/footer.css');
 
-body {
-  background-color: #2A2C2F;;
+
+
+/*@media screen and (max-width: 1024px) {
+  .cover{
+    margin-left: 0px;
+    margin-right: 0px;
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover{
+    margin-top: 88px;
+    margin-bottom: 88px;
+  }
+}
+
+
+@media screen and (max-width: 320px) {
+  .cover{
+    margin-top: 64px;
+    margin-bottom: 64px;
+  }
+}
+*/
+.cover__link{
+  text-decoration: none;
+
+}
+.cover__link::before {
+  content: '';
+  background: #2A2C2F;
+  opacity: 0.3;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: 0.3s;
+  z-index: -1;
+
+}
+
+.cover__link:hover::before {
+  opacity: 0.8;
+}
+
+.cover__title{
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+
+  color: white;
+  text-align: center;
+  font-family: Inter, Arial, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 72px;
+  line-height: 76px;
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
 }
